feat: env example updated

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,12 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+BAUBUDDY_API_URL=url
+BAUBUDDY_API_LOGIN_URL=login_url
+BAUBUDDY_API_AUTHORIZATION=authorization
+BAUBUDDY_API_USERNAME=username
+BAUBUDDY_API_PASSWORD=password
+
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
