feat: env example updated

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ BAUBUDDY_API_LOGIN_URL=login_url
 BAUBUDDY_API_AUTHORIZATION=authorization
 BAUBUDDY_API_USERNAME=username
 BAUBUDDY_API_PASSWORD=password
+WKHTMLTOPDF_BINARY=/usr/bin/wkhtmltopdf
+WKHTMLTOIMAGE_BINARY=/usr/bin/wkhtmltoimage
 
 MEMCACHED_HOST=127.0.0.1
 
